# qrcode_detection_package

./: README.md  package.xml  setup.cfg  setup.py
qrcode_detection_package/: main.py
test/: conftest.py  test_qr_code_detection.py
