<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrcode_detection_package</name>
  <version>0.0.0</version>
  <description>This package contains all nodes responsible for detecting QR codes from the camera input</description>
  <maintainer email="fie6449@thi.de">Finn</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>interfaces</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>common_package_py</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
